k8s_ingress/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-tomcat-deployment
  labels:
    app: app2-tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-tomcat
  template:
    metadata:
      labels:
        app: app2-tomcat
    spec:
      containers:
        - name: app1-tomcat
          image: sanjay7917/tomcat
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2-tomcat-nodeport-service
spec:
  type: NodePort
  selector:
    app: app2-tomcat
  ports:
  - port: 8080
    targetPort: 8080
